# Velocity

./: .gitattributes  .gitignore  README.md  eslint.config.js  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
scripts/: production-check.js  version-manager.js
src/: App.css  App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  build.rs  check_output.txt  check_output_2.txt  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/resources/binaries/linux/: yt-dlp
src-tauri/resources/binaries/macos/: yt-dlp
src-tauri/src/: lib.rs  startup_verification.rs  updater.rs
src-tauri/src/commands/: aria2.rs  mod.rs  settings.rs  streaming.rs  ytdlp.rs
src-tauri/src/models/: mod.rs
src-tauri/src/services/: app_state.rs  aria2_service.rs  cookie.rs  database.rs  database_pool.rs  download_manager.rs  download_worker.rs  metadata.rs  migrations.rs  mod.rs  playlist.rs  playlist_discovery.rs  python_worker.rs  resource_manager.rs  security.rs  settings.rs  ytdlp_client.rs  ytdlp_config.rs  ytdlp_info_client.rs  ytdlp_manager.rs
src/components/: ConfirmDialog.tsx  DeleteVideoDialog.tsx  DownloadTaskCard.tsx  DownloadedVideoCard.tsx  ErrorBoundary.tsx  FlowPlayer.tsx  FormatSelector.tsx  LoadingSpinner.tsx  PlaylistCard.tsx  SkeletonLoader.tsx  VideoCard.tsx
src/context/: AuthContext.tsx  LanguageContext.tsx  LibraryContext.tsx  PlayerContext.tsx  PlaylistsContext.tsx  SessionContext.tsx  ThemeContext.tsx
src/hooks/: useAppState.ts  useAuth.ts  useDebounce.ts  useDownloadFlow.tsx  useDownloads.ts  useFetchPlaylists.ts  useKeyboardShortcuts.ts  usePlaylists.ts  useRustCommands.ts  useSettings.ts
src/pages/: Aria2Page.tsx  CookiesPage.tsx  DownloadsPage.tsx  PlaylistPage.tsx  SettingsPage.tsx
src/theme/: colors.ts  themes.ts
src/types/: index.ts  playlist.ts  settings.ts  video.ts
src/utils/: logger.ts
(+81 files in other folders)
