[package]
name = "velocity"
version = "1.0.0"
description = "YT-DLP Based Video Downloader and Playlist Manager"
authors = ["Velocity"]
license = "MIT"
repository = "https://github.com/777abhishek/velocity"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
# Core dependencies
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = [] }
tauri-plugin-log = { version = "2", features = ["colored"] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"

# Database and storage
rusqlite = { version = "0.32", features = ["bundled", "trace"] }
dirs = "5.0"
chrono = { version = "0.4", features = ["serde"] }

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "process", "sync", "time"] }
futures = "0.3"
uuid = { version = "1.0", features = ["v4"] }
which = "6.0"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "http2", "json"] }
urlencoding = "2.1"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Utilities
md-5 = "0.10"
hex = "0.4"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.48", features = ["Win32_Foundation", "Win32_System_Threading", "Win32_System_Diagnostics_ToolHelp"] }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.27", features = ["signal", "process"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
strip = true
opt-level = "s"

[profile.dev]
debug = true
opt-level = 0
